--- a/style.css
+++ b/style.css
@@ -22,6 +22,21 @@ body{
     margin-bottom: 150px;
 }
 
+.placeholder{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: grey;
+    height: 300px;
+    width: 600px
+}
+
+.side_panel{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 h2{
     font-size: 48px;
     font-weight: bolder;
@@ -38,7 +53,7 @@ h2{
 .a_header{
     font-size: 30px;
     color: #f9faf8;
-    font-weight: bolder;
+    font-weight: 800;
 }
 
 ul{
@@ -47,6 +62,96 @@ ul{
     gap: 16px;
     font-size: 18px;
     color: #E5E7EB;
+}
+
+.C2_header{
+    font-size: 36px;
+    font-weight: 800;
+    color: #1f2937;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.container2{
+    display: flex;
+    justify-content: center;
+    gap: 50px
+    
+}
+
+.container2_text{
+    display: flex;
+    justify-content: center;
+    gap: 60px
+    
+}
+
+.image{
+    border-style: solid;
+    border-color: #3882f6;
+    width: 200px;
+    height: 150px;
+    border-radius: 15px;
+}
+
+.subtext{    
+    width: 200px;    
+}
+
+.container3{
+    background-color: #E5E7EB;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 60px;
+    padding-top: 60px;
+}
+
+.quote{
+    font-size: 36px;
+    width: 50%;
+    color: #1F2937;
+    margin-bottom: 10px;
+}
+
+.container4{
+    padding: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.block{
+    background-color: #3882F6;
+    color: white;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    height: 100px;
+    padding-left: 60px;
+    padding-right: 60px;
+    justify-content: space-between;
+}
+
+.call_header{
+    display: flex;
+    flex-direction: column;
+    margin-right: 110px;
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: white;
+    padding: 20px;
+    font-size: 20px;
 }
 
 button{
